[package]
name = 'mx'
version = '0.1.0'
authors = ['Sergey Isaev <isvforall@gmail.com>']
edition = '2018'

[dependencies]
actix-web = '3.3.2'
async-trait = '0.1.50'
bincode = "1.3.3"
# bitmex = '0.2'
bytes = '1.0.1'
chrono = '0.4.19'
crossbeam = '0.8.1'
ctrlc = '3.1.9'
data-encoding = '2.3.2'
flate2 = "1.0.20"
hyper-tls = '0.5.0'
lazy_static = '1.4.0'
percent-encoding = '1.0.1'
ring = '0.13'
rusqlite = '0.25.3'
serde = '1.0.123'
serde_derive = '1.0.123'
serde_json = '1.0.62'
strum = '0.21'
strum_macros = '0.21.1'
tokio-tungstenite = "0.14.0"
toml = '0.5.8'
tracing = '0.1.23'
tracing-appender = '0.1.2'
tracing-subscriber = '0.2.15'
tungstenite = "0.13.0"
url = "2.1.0"

[dependencies.binance]
git = 'https://github.com/wisespace-io/binance-rs.git'

[dependencies.hyper]
version = '0.14.9'
features = ['full']

[dependencies.reqwest]
version = '0.11.3'
features = [
    'blocking',
    'json',
    'multipart',
]

[dependencies.tokio]
version = '1.10.1'
features = ['full']
